Added frontend, slightly tweaked compose

--- a/static/done.html
+++ b/static/done.html
@@ -1,5 +1,30 @@
 <!DOCTYPE html>
-<body>
-    <h1>Congratulations!</h1>
-    <p>You have verified, and don't need to do anything.<br>Please click <a href="/logout">this</a> if you believe that was a mistake.</p>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>r/IBO Discord Server</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    </head>
+    <body>
+    <section class="hero is-info">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">r/IBO Discord Server</h1>
+                <h2 class="subtitle">Online Verification System</h2>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Congratulations!</h1>
+            <p>
+            You have verified your account; the roles have been given to you. <br />
+            Should this not be the case, please send a DM to <strong>Mod-Mail#7450</strong>. <br />
+            Wrong account? Click <a href="/logout">this</a> to log out.
+            </p>
+        </div>
+    </section>
+    </body>
+</html>
