Added new year roles, production docker-compose.yml

--- a/static/verify.html
+++ b/static/verify.html
@@ -71,7 +71,13 @@
                         <div class="select">
                             <select name="role" id="year-role">
                                 <option value="__select">Please select...</option>
+                                <option value="Alumni">I am an IB Alumnus</option>
                                 <option value="May 2020">I take my exams in May 2020</option>
+                                <option value="November 2020">I take my exams in November 2020</option>
+                                <option value="May 2021">I take my exams in May 2021</option>
+                                <option value="November 2021">I take my exams in November 2021</option>
+                                <option value="Pre-IB">I am Pre-IB</option>
+                                <option value="Not IB">I am not an IB student/alumnus</option>
                             </select>
                         </div>
                     </div>
