Update to Veeru's redesign

--- a/static/done.html
+++ b/static/done.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset='UTF-8'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+        <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="r/IBO Discord Server" />
+        <meta property="og:description" content="Online Verification System for the r/IBO Discord Server.\nClick here to verify yourself and gain access to the rest of the server." />
+        <meta property="og:url" content="https://ibdiscord.team" />
+        <meta property="og:image" content="/assets/embed.jpg" />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="400" />
+        <meta property="og:image:alt" content="r/IBO Online Verification" />
         <title>r/IBO Discord Server</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+        <link rel="stylesheet" href="/assets/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="/assets/script.js"></script>
     </head>
-    <body>
-    <section class="hero is-info">
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="title">r/IBO Discord Server</h1>
-                <h2 class="subtitle">Online Verification System</h2>
+    <body class="">
+        <div id="overlay">
+            <div id="content">
+            <h1 id="title">r/IBO Discord Server</h1>
+                <h2 style="display: inline-block">Congratulations!</h2>
+                <button class="themeSwitch"></button>
+                <hr>
+                <div id="rules" class="info">
+                    <div>
+                        <h2 class="sub-heading">You have verified your account; the roles have been given to you.</h2>
+                    </div>
+                    <p>Should this not be the case, please send a DM to <a href="https://discordapp.com/channels/@me/466271091686375424" style="text-decoration: none;" target="_blank"><span class="ping">@Mod-Mail</span></a>.<br>Wrong account? Click <a href="/logout">this</a> to log out.</p>
+                    <p></p>
+
+                </div>
             </div>
         </div>
-    </section>
-    <section class="section">
-        <div class="container">
-            <h1 class="title">Congratulations!</h1>
-            <p>
-            You have verified your account; the roles have been given to you. <br />
-            Should this not be the case, please send a DM to <strong>Mod-Mail#7450</strong>. <br />
-            Wrong account? Click <a href="/logout">this</a> to log out.
-            </p>
-        </div>
-    </section>
     </body>
 </html>
