Implement Veeru's redesign and introduce lockdown mode.

--- a/static/blocked.html
+++ b/static/blocked.html
@@ -21,14 +21,13 @@
         <div id="overlay">
             <div id="content">
             <h1 id="title">r/IBO Discord Server</h1>
-                <h2 style="display: inline-block">Congratulations!</h2>
+                <h2 style="display: inline-block">Blocked.</h2>
                 <button class="themeSwitch"></button>
                 <hr>
                 <div id="rules" class="info">
                     <div>
-                        <h2 class="sub-heading">You have verified your account; the roles have been given to you.</h2>
+                        <h2 class="sub-heading">Your account does not meet the requirements to verify. Please try again later.</h2>
                     </div>
-                    <p>Should this not be the case, please send a DM to <a href="https://discordapp.com/channels/@me/466271091686375424" style="text-decoration: none;" target="_blank"><span class="ping">@Mod-Mail</span></a>.<br>Wrong account? Click <a href="/logout">this</a> to log out.</p>
                 </div>
             </div>
         </div>
