UI Changes for Rule 6 and Rule 10

--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,8 @@
                             </li>
 
                             <li id="rule6">
-                                <span class="rule">Don’t ping the staff team (<span class="ping">@Staff</span>) or the admins (<span class="ping" id="adminPing">@Admin</span>) unless something urgent occurs that needs an immediate response from all online staff members (e.g. multiple organized trolls, a server raid, etc.).</span> <br>For less urgent issues, you can contact the staff team by DMing <span class="ping">@Mod-Mail</span> or any staff member.
+                                <span class="rule">Don’t ping the staff team (<span class="ping">@Staff</span>) or the admins (<span class="ping" id="adminPing">@Admin</span>) unless something urgent occurs that needs an immediate response from all online staff members (e.g. multiple organized trolls, a server raid, etc.).</span> 
+                                <span class="ruleText">For less urgent issues, you can contact the staff team by DMing <span class="ping">@Mod-Mail</span> or any staff member.</span>
                             </li>
 
                             <li id="rule7">
@@ -89,7 +90,6 @@
                                 <span class="ruleText">Furthermore:
                                 <br>a) Paid resources, communities, subscriptions, etc. will not be approved.
                                 <br>b) Free resources, communities, etc. must sufficiently guard against academic misconduct and protect users’ privacy to be considered for approval.
-                                <br>
                                 <br>The staff team reserves the right to make final decisions on advertising at our discretion in order to enforce our other server rules and protect our users.</span>
                             </li>
 
