Added Pre-IB Option in Dropdown

--- a/static/index.html
+++ b/static/index.html
@@ -135,6 +135,7 @@
                             <option value="May 2021">I take my exams in May 2021</option>
                             <option value="November 2021">I take my exams in November 2021</option>
                             <option value="Alumni">I am an IB Graduate</option>
+                            <option value="Pre-IB">I haven't yet started studying the IB Diploma</option>
                             <option value="Not IB">I do not/did not take IB</option>
                         </select>
         
