Added Rule 14 and edited Rule 2 to match up with the recent changes.

--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,7 @@
                             </li>
 
                             <li id="rule2">
-                                <span class="rule"">Discriminatory behavior (using slurs, derogatory attacks, posting hate symbols, etc.) is forbidden.</span>
+                                <span class="rule">Discriminatory behavior and language (using slurs, derogatory attacks, posting hate symbols, etc.) is forbidden.</span>
                                 <span class="ruleText">This covers (but isn't limited to): racism, sexism, ableism, homophobia, transphobia, religious bigotry, and rape apologia.</span>
                             </li>
 
@@ -106,6 +106,13 @@
                             <li id="rule13">
                                 <span class="rule">Piracy is strictly forbidden, as per the <a href="https://discordapp.com/guidelines" target="_blank">Discord Community Guidelines</a>.</span>
                                 <span class="ruleText">Don't share or ask for any pirated resources or materials, or directly reference where one may find them illegally. This includes but isn't limited to: textbooks, past exam papers, paywalled journal articles, etc.</span>
+                            </li>
+
+                            <li id="rule14">
+                                <span class="rule">As much as possible, use English for all conversations.</span>
+                                <div class="ruleText"><em>(Obvious exceptions apply to academic conversations, e.g. in the Group 1/2 subject channels)</em>
+                                <br>While we wish we could allow more languages in more situations, it's much harder for us staff to enforce the rules with languages we don't speak.
+                                </div>
                             </li>
                         </ol>
 
