Changed the accidental div tag. dumb dumb me

--- a/static/index.html
+++ b/static/index.html
@@ -110,9 +110,9 @@
 
                             <li id="rule14">
                                 <span class="rule">As much as possible, use English for all conversations.</span>
-                                <div class="ruleText"><em>(Obvious exceptions apply to academic conversations, e.g. in the Group 1/2 subject channels)</em>
+                                <span class="ruleText"><em>(Obvious exceptions apply to academic conversations, e.g. in the Group 1/2 subject channels)</em>
                                 <br>While we wish we could allow more languages in more situations, it's much harder for us staff to enforce the rules with languages we don't speak.
-                                </div>
+                                </span>
                             </li>
                         </ol>
 
