Updated rule 10, rule 1, and acknowledgement

--- a/static/index.html
+++ b/static/index.html
@@ -30,11 +30,11 @@
                     </div>
                         <ol>
                             <li id="rule1">
-                                <span class="rule">Be polite & respectful at all times in accordance with the <a href="https://discordapp.com/guidelines" target="_blank">Discord Community Guidelines</a>.</span>
+                                <span class="rule">Be respectful to other users and follow the <a href="https://discordapp.com/guidelines" target="_blank">Discord Community Guidelines</a>.</span>
                                 <span class="ruleText">This means (but isn’t limited to):
-                                <br>a) Don’t insult or attack others (directly or passive-aggressively).
+                                <br>a) Don’t insult or attack others, whether directly or passive-aggressively.
                                 <br>b) Don’t deliberately try to irritate, provoke, or 'rile up' others.
-                                <br>c) Respect others’ privacy - don’t harass people via DMs, pings, etc. when they have explicitly asked you to stop, and don’t leak others’ private information without their consent.
+                                <br>c) Respect others’ privacy & personal space - don’t harass people by DMing, pinging, etc. them when they’ve asked you not to, and don’t share others’ private info without their consent.
                                 <br>Etc.</span>
                             </li>
 
@@ -86,11 +86,11 @@
                             </li>
 
                             <li id="rule10">
-                                <span class="rule">All server users’ advertising must be approved by staff and may only be posted in <span class=ping>#community-adverts</span>.</span>
-                                <span class="ruleText">Furthermore:
-                                <br>a) Paid resources, communities, subscriptions, etc. will not be approved.
-                                <br>b) Free resources, communities, etc. must sufficiently guard against academic misconduct and protect users’ privacy to be considered for approval.
-                                <br>The staff team reserves the right to make final decisions on advertising at our discretion in order to enforce our other server rules and protect our users.</span>
+                                <span class="rule">Staff must approve all advertising (asking others to support/view/use anything) before posting.</span>
+                                <span class="ruleText">
+                                    DM <span class="ping">@Mod-Mail</span> to request approval. Staff will judge requests using <a href="https://bit.ly/2VEyiwZ">these guidelines</a>. All ads must go in <span class=ping>#community-adverts</span> except if you have a good reason (see guidelines for more info).
+                                    <br>
+                                    <br><em>(If you’re just posting something without promoting it, e.g. posting a gaming video in #gaming without asking for likes/subs/views, you don’t need approval.)</em></span>
                             </li>
 
                             <li id="rule11">
@@ -117,8 +117,14 @@
                         </ol>
 
                         <hr>
-                        <label id="check"><input type="checkbox" id="box">I agree to the server rules.</label>
-                        <p>By joining the server, you acknowledge that you understand and agree to follow all of the above rules. The staff team will be enforcing these rules throughout the server in all text and voice channels with punishments including warnings, kicks, and bans - see <a href="http://bit.ly/2sHzp34">this document</a> for more details.</p>
+                        <label id="check"><input type="checkbox" id="box">I agree to the server rules.</label>                        
+                        <p>By joining this server, you acknowledge that you understand and agree to follow all the above rules. The staff team will enforce these rules throughout all text and voice channels of the server as follows:
+
+                            <br>• 1st offenses → Warning from a staff member (unless the offense is particularly severe, e.g. academic dishonesty)</br>
+                            <br>• Further offenses (or severe 1st offenses) → Kicks, mutes, or bans</br>
+                            <br>• The more severe your offense/the more history you have of breaking the rules, the harsher your punishment (final decisions on punishments are at staff discretion)</br>
+                            
+                            NOTE: Even for further offenses, you may initially receive a verbal warning from a staff member to immediately let you know what you did was unacceptable, while the staff team discusses appropriate further punishment.</p>
                         <p class="warning" id="ruleWarn">⚠️ You did not agree to the server rules!</p>
                         <button class="button" id="next">Next</button>
                 </div>
