Update rules + restyle rule page

--- a/static/index.html
+++ b/static/index.html
@@ -51,8 +51,8 @@
                             <li id="rule4">
                                 <span class="rule">NSFW content (as per <a href="https://support.discordapp.com/hc/en-us/articles/360024871991-Discord-Partnership-Code-of-Conduct" target="_blank">Discord’s Code of Conduct</a>, aka CoC)</span>
                                 <span class="ruleText">a) In non-NSFW channels: All non-academic, overt, or excessive mentions of sexual acts or graphic violence are forbidden.
-                                <br>b) In NSFW channels: Discussion of sex, violence, etc. is allowed, but content that visually and explicitly displays sexual acts/organs or nudity isn’t.    
-                                <br>Pre-IBs, or anyone known by staff to be under 16, will not be allowed access to any NSFW channel.</span>
+                                <br>b) In NSFW channels: Discussion of sex, violence, etc. is allowed, but explicit verbal or visual depictions of sexual acts/organs or nudity isn't.
+                                <br>Anyone known by staff to be under 16, as well as all pre-IBs regardless of age, will not be allowed access to any NSFW channel.</span>
                             </li>
 
                             <li id="rule5">
@@ -86,16 +86,14 @@
                             </li>
 
                             <li id="rule10">
-                                <span class="rule">Staff must approve all advertising (asking others to support/view/use anything) before posting.</span>
-                                <span class="ruleText">
-                                    DM <span class="ping">@Mod-Mail</span> to request approval. Staff will judge requests using <a href="https://bit.ly/2VEyiwZ">these guidelines</a>. All ads must go in <span class=ping>#community-adverts</span> except if you have a good reason (see guidelines for more info).
-                                    <br>
-                                    <br><em>(If you’re just posting something without promoting it, e.g. posting a gaming video in #gaming without asking for likes/subs/views, you don’t need approval.)</em></span>
+                                <span class="rule">Don’t self-promote servers, petitions, websites, etc, unless what you're promoting is relevant to a conversation and is free to use.</span>
+                                <span class="ruleText">Staff have discretion to delete any self-promotion that's obnoxious, spammy, breaks the rules, endangers the privacy of members here, or that’s otherwise harmful to the server community.</span>
                             </li>
 
                             <li id="rule11">
-                                <span class="rule">At least some of your display name (the name shown in chat when you send a message) must be typeable with a typical English keyboard,</span> enough so that your user profile would appear if another user attempts to ping you by typing <span class="ping">@[displayname]</span> in chat.
-                                <span class="ruleText">E.g. If your username is JohnSmith then 𝓙𝓸𝓱𝓷𝓢𝓶𝓲𝓽𝓱 wouldn’t be okay, but John𝓢𝓶𝓲𝓽𝓱 would be okay because your user profile would appear if someone typed <span class="inlineCode">@John</span>.</span>
+                                <span class="rule">Your display name (the name that shows up when you type in chat):</span>
+                                <span class="ruleText">a) Must be at least partially typeable using a typical English keyboard, so you can be pinged in chat (e.g. <span class="inlinecode">𝓙𝓸𝓱𝓷𝓢𝓶𝓲𝓽𝓱</span> wouldn’t be okay, but <span class="inlinecode">JohnSmith</span> or <span class="inlinecode">John𝓢𝓶𝓲𝓽𝓱</span> would be).
+                                <br>b) Can’t be 'everyone', 'here', or the exact name of any role on this server (e.g. 'Staff', 'Admin', 'Events', etc.)</span>
                             </li>
 
                             <li id="rule12">
@@ -117,14 +115,13 @@
                         </ol>
 
                         <hr>
-                        <label id="check"><input type="checkbox" id="box">I agree to the server rules.</label>                        
-                        <p>By joining this server, you acknowledge that you understand and agree to follow all the above rules. The staff team will enforce these rules throughout all text and voice channels of the server as follows:
-
-                            <br>• 1st offenses → Warning from a staff member (unless the offense is particularly severe, e.g. academic dishonesty)</br>
-                            <br>• Further offenses (or severe 1st offenses) → Kicks, mutes, or bans</br>
-                            <br>• The more severe your offense/the more history you have of breaking the rules, the harsher your punishment (final decisions on punishments are at staff discretion)</br>
-                            
-                            NOTE: Even for further offenses, you may initially receive a verbal warning from a staff member to immediately let you know what you did was unacceptable, while the staff team discusses appropriate further punishment.</p>
+                        <label id="check" class="ruleAgree"><input type="checkbox" id="box">I agree to the server rules.</label>                        
+                        <p class="ruleDisclaimer">By joining this server, you acknowledge that you understand and agree to follow all the above rules. The staff team will enforce these rules throughout all text and voice channels of the server as follows:
+                            <br>• 1st offenses → Warning from a staff member (unless the offense is particularly severe, e.g. academic dishonesty)
+                            <br>• Further offenses (or severe 1st offenses) → Kicks, mutes, or bans
+                            <br>• The more severe your offense/the more history you have of breaking the rules, the harsher your punishment (final decisions on punishments are at staff discretion)    
+                            <br><br><b>NOTE:</b> Even for further offenses, you may initially receive a verbal warning from a staff member to immediately let you know what you did was unacceptable, while the staff team discusses appropriate further punishment.
+                        </p>
                         <p class="warning" id="ruleWarn">⚠️ You did not agree to the server rules!</p>
                         <button class="button" id="next">Next</button>
                 </div>
@@ -148,7 +145,7 @@
                             <option value="November 2021">I take my exams in November 2021</option>
                             <option value="May 2022">I take my exams in May 2022</option>
                             <option value="Alumni">I am an IB Graduate</option>
-                            <option value="Pre-IB">I haven't yet started studying the IB Diploma</option>
+                            <option value="Pre-IB">I haven't yet started studying the IB Diploma (but I plan to)</option>
                             <option value="Not IB">I do not/did not take IB</option>
                         </select>
         
