Add hyperlink to get roles channel

--- a/static/done.html
+++ b/static/done.html
@@ -26,7 +26,9 @@
                 <hr>
                 <div id="rules" class="info">
                     <div>
-                        <h2 class="sub-heading">You have verified your account; the roles have been given to you. Please grab your subjects in <span class="ping">#get-roles</span>. You may close this window.</h2>
+                        <h2 class="sub-heading">You have verified your account; the roles have been given to you. 
+                        Please grab your subjects in <a href="https://discord.com/channels/230296179991248896/582911350179889153" style="text-decoration: none;" target="_blank"><span class="ping">#get-roles</span></a>. 
+                        You may close this window.</h2>
                     </div>
                     <p>Should this not be the case, please send a DM to <a href="https://discordapp.com/channels/@me/466271091686375424" style="text-decoration: none;" target="_blank"><span class="ping">@Mod-Mail</span></a>.<br>Wrong account? Click <a href="/logout">this</a> to log out.</p>
                 </div>
