Remove broken newline

--- a/static/done.html
+++ b/static/done.html
@@ -6,7 +6,7 @@
         <meta http-equiv='X-UA-Compatible' content='ie=edge'>
         <meta property="og:type" content="website">
         <meta property="og:title" content="r/IBO Discord Server" />
-        <meta property="og:description" content="Online Verification System for the r/IBO Discord Server.\nClick here to verify yourself and gain access to the rest of the server." />
+        <meta property="og:description" content="Online Verification System for the r/IBO Discord Server. Click here to verify yourself and gain access to the rest of the server." />
         <meta property="og:url" content="https://ibdiscord.team" />
         <meta property="og:image" content="/assets/embed.jpg" />
         <meta property="og:image:width" content="400" />
