Changed rules 4b and 13 to match server rule changes

--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
                             <li id="rule4">
                                 <span class="rule">NSFW content (as per <a href="https://support.discordapp.com/hc/en-us/articles/360024871991-Discord-Partnership-Code-of-Conduct" target="_blank">Discord’s Code of Conduct</a>, aka CoC)</span>
                                 <span class="ruleText">a) In non-NSFW channels: All non-academic, overt, or excessive mentions of sexual acts or graphic violence are forbidden.
-                                <br>b) In NSFW channels: Discussion of sex, violence, etc. is allowed, but explicit verbal or visual depictions of sexual acts/organs or nudity isn't.
+                                <br>b) In NSFW channels: Discussion of sex, violence, etc. is allowed. However, explicit verbal and visual depiction of sexual acts, sex organs, or nudity isn't.
                                 <br>Anyone known by staff to be under 16, as well as all pre-IBs regardless of age, will not be allowed access to any NSFW channel.</span>
                             </li>
 
@@ -103,7 +103,7 @@
 
                             <li id="rule13">
                                 <span class="rule">Piracy is strictly forbidden, as per the <a href="https://discordapp.com/guidelines" target="_blank">Discord Community Guidelines</a>.</span>
-                                <span class="ruleText">Don't share or ask for any pirated resources or materials, or directly reference where one may find them illegally. This includes but isn't limited to: textbooks, past exam papers, paywalled journal articles, etc.</span>
+                                <span class="ruleText">Don't share or ask for any pirated resources or materials (such as textbooks, past exam papers, paywalled journal articles, etc.) or directly reference where one may find them illegally. This includes encouraging others to do so in DMs.</span>
                             </li>
 
                             <li id="rule14">
